--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "history": "^4.10.1",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.1.1",
-    "node-sass": "^6.0.0",
+    "sass": "^1.69.0"
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.7",
